--- a/index.html
+++ b/index.html
@@ -36,24 +36,22 @@
 	        	</div>
         	</nav><br>
       	</div>
-
-
 <!-- Carousel -->
 	<div class="container-fluid">
     <div id="movieCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#movieCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#movieCarousel" data-slide-to="1"></li>
-    <li data-target="#movieCarousel" data-slide-to="2"></li>    
-  </ol>
+        <ol class="carousel-indicators">
+          <li data-target="#movieCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#movieCarousel" data-slide-to="1"></li>
+          <li data-target="#movieCarousel" data-slide-to="2"></li>    
+        </ol>
      	<div class="carousel-inner">
         	<div class="item active">
             	<img class="full-width" src="http://o.aolcdn.com/hss/storage/midas/88320a9147e2abc2bb49b022d2a4b85c/204527652/grandtourbanner.jpg" alt="The Grand Tour">
 	            <div class="carousel-caption grandTour">
 	              <h2>New Grand Tour Episodes</h2>
 	              <p>Check out the new adventures of the 3 British car journalists as they embark on a tour around the world!</p>
-	              <p><a class="btn btn-primary btn-lg" href="#" role="button">Watch Now!</a></p>
+	              <p><a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=kLtpcxtk4HI" role="button">Watch Now!</a></p>
 	            </div>
           	</div>
           <div class="item">
@@ -61,7 +59,7 @@
             <div class="carousel-caption">
               <h2>Game of Thrones Season 7</h2>
               <p>Watch the trailer for the all new season</p>
-              <p><a class="btn btn-primary btn-lg" href="#" role="button">Watch Now!</a></p>
+              <p><a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=EI0ib1NErqg" role="button">Watch Now!</a></p>
             </div>
           </div>
           <div class="item">
@@ -69,7 +67,7 @@
             <div class="carousel-caption">
               <h2>Mr Robot</h2>
               <p>Season 2 now out!</p>
-              <p><a class="btn btn-primary btn-lg" href="#" role="button">Watch Now!</a></p>
+              <p><a class="btn btn-primary btn-lg" href="https://www.youtube.com/watch?v=Oc-AsN7d1wg" role="button">Watch Now!</a></p>
             </div>
           </div>
     	</div>
@@ -111,20 +109,24 @@
     </div>
 
 
-
-     <div class="stripe1">
+    <div class="stripe1">
+        <div id="latestphoto-container" class="container-fluid containers text-center">
+        <h5 class="catfont1" id="latest">Latest Movies</h5>
+        </div>
+    </div>
+     <div class="stripe2">
         <div id="scifiphoto-container" class="container-fluid containers text-center">
-    		<h5 class="catfont1" id="Scifi">Sci-Fi</h5>
+    		<h5 class="catfont2" id="Scifi">Sci-Fi</h5>
       	</div>
     </div>
-    <div class="stripe2">
+    <div class="stripe1">
     	<div id="warphoto-container" class="container-fluid containers text-center">
-            <h5 class="catfont2" id="War">War</h5>
+            <h5 class="catfont1" id="War">War</h5>
 		</div>
     </div>
-    <div class="stripe1">
+    <div class="stripe2">
         <div id="romancephoto-container" class="container-fluid containers text-center">
-          <h5 class="catfont1" id="Romance">Romance</h5> 
+          <h5 class="catfont2" id="Romance">Romance</h5> 
         </div>
 	</div>
     <div class="row footer text-center">
@@ -140,5 +142,6 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 </body>
 </html>
