--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 		                  <h2>Our MDB</h2>
 		                </div>
 		                <div class="col-md-2">
-		                   <h3><a href="#AllMovies">All Movies</a></h3>
+		                   <h3><a href="#AllMovies">TV Series</a></h3>
+		                </div>
+		                <div class="col-md-2">
+		                   <h3><a href="#">Movies</a></h3>
 		                </div>
 		                <div class="col-md-2">
 		                   <h3><a href="#Scifi">Scifi</a></h3>
-		                </div>
-		                <div class="col-md-2">
-		                   <h3><a href="#War">War</a></h3>
 		                </div>
 		                <div class="col-md-2">
 		                   <h3><a href="#Romance">Romance</a></h3>
